# backend/other/inspiral-swagger.json
@@ -862,6 +862,43 @@
         }
       }
     },
+    "/entry/search/{keyword}": {
+      "get": {
+        "tags": [
+          "entry"
+        ],
+        "summary": "Get entries by keyword",
+        "description": "",
+        "operationId": "getEntriesByKeyword",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "keyword",
+            "in": "path",
+            "description": "Keyword to search for",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Entry"
+              }
+            }
+          }
+        }
+      }
+    },
     "/admin/training": {
       "post": {
         "tags": [
